--- a/views/statue.html
+++ b/views/statue.html
@@ -229,11 +229,11 @@
 
                <div class="regulation-card">
                     <div class="regulation-header">
-                        <h3><span class="country-flag">St</span>博普智库 </h3>
+                        <h3><span class="country-flag"> </span>博普智库 </h3>
                     </div>
                     <div class="regulation-body">
                         <p class="regulation-description">国内外药典法规综合检索，制药人必备知识工具。</p>
-                        <a href="https://www.bopuyun.com/yaodian/search/" target="_blank" class="btn">访问</a>
+                        <a href="https://www.bopuyun.com/yaodian/search/" target="_blank" class="btn">访问博普智库</a>
                     </div>
                 </div>
       
