--- a/views/column.html
+++ b/views/column.html
@@ -298,6 +298,7 @@
         }
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="../statics/modules/jquery.min.js"></s
 </head>
 
 <body>
