--- a/views/solution.html
+++ b/views/solution.html
@@ -482,7 +482,7 @@
         </div>
         
         <footer>
-            <p>© 2025 实验室溶液配置计算器 | 为实验室工作设计</p>
+            <p>© 2025 实验室溶液配置计算器</p>
             <p style="font-size: 0.8rem; margin-top: 5px;">提示：使用"添加容量瓶类型"按钮可以添加多种不同规格的容量瓶</p>
         </footer>
     </div>
