--- a/views/sop.html
+++ b/views/sop.html
@@ -273,12 +273,12 @@
         `
         const sop = [
             "L414-9PX-01",
-            "L018-1",
-            "L018-4W",
-            "L389-101",
-            "L414-5KR",
-            "L414-7",
-            "L414-801KR",
+            "L414-10PX-01",
+            "L414-11PX-01",
+            "L414-12PX-01",
+            "L414-801PX-01",
+            "丁二酸酐",
+            "P006",
         ]
 
         $(() => {
